--- a/app/src/main/res/layout/fragment_weather.xml
+++ b/app/src/main/res/layout/fragment_weather.xml
@@ -14,12 +14,13 @@
                       android:gravity="center">
             <Space android:layout_width="wrap_content" android:layout_height="10dp"/>
             <TextView android:id="@+id/location" android:layout_width="wrap_content"
-                      android:layout_height="wrap_content" android:textSize="24dp"
+                      android:layout_height="wrap_content" android:textSize="28dp"
                       android:text="Lodz, PL"
                       android:textColor="#FFD5D5D5"/>
             <LinearLayout android:layout_width="wrap_content"
                           android:layout_height="wrap_content"
                           android:orientation="horizontal">
+                <Space android:layout_width="wrap_content" android:layout_height="5dp"/>
                 <TextView android:id="@+id/current_date" android:layout_width="wrap_content"
                           android:layout_height="wrap_content" android:textSize="14dp"
                           android:text="9 May 2021, "
@@ -29,21 +30,31 @@
                            android:paddingTop="10dp"
                            android:id="@+id/textclock"
                            android:format12Hour="hh:mm:ss"
-                           android:textSize="14dp"
+                           android:textSize="12dp"
                            android:textColor="#FFD5D5D5"
                            android:text="22:22"/>
             </LinearLayout>
         </LinearLayout>
-
+<Space android:layout_width="wrap_content" android:layout_height="20dp"/>
         <LinearLayout android:id="@+id/overviewContainer" android:layout_width="match_parent"
                       android:layout_height="wrap_content" android:orientation="vertical"
+
                       android:layout_centerInParent="true">
 
-            <TextView android:id="@+id/status" android:layout_width="wrap_content"
-                      android:layout_height="wrap_content" android:textSize="18dp"
+            <TextView android:id="@+id/weather_description" android:layout_width="wrap_content"
+                      android:layout_height="wrap_content" android:textSize="22dp"
                       android:layout_gravity="center"
                       android:text="Clear Sky"
-                      android:textColor="#FFD5D5D5"/>
+                      android:textColor="#FFD5D5D5"
+                      android:inputType="textCapSentences"/>
+
+            <ImageView android:id="@+id/weather_icon"
+                       android:layout_width="200dp"
+                       android:layout_height="0dp"
+                       android:layout_weight="4"
+                       android:layout_gravity="center"
+
+            />
             <TextView android:id="@+id/temperature" android:layout_width="wrap_content"
                       android:layout_height="wrap_content" android:textSize="90dp"
                       android:fontFamily="sans-serif-thin" android:layout_gravity="center"
@@ -63,121 +74,20 @@
                           android:text="Max Temp: 123"
                           android:textColor="#FFD5D5D5"/>
             </LinearLayout>
+            <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
+                          android:orientation="horizontal" android:gravity="center"
+                            android:paddingTop="25dp">
+
+                <TextView android:id="@+id/air_pressure" android:layout_width="wrap_content"
+                          android:layout_height="wrap_content"
+                          android:text="Air pressure: 123"
+                          android:textColor="#FFD5D5D5"/>
+            </LinearLayout>
 
         </LinearLayout>
         <Space android:layout_width="wrap_content" android:layout_height="10dp"/>
     </LinearLayout>
 
-    <TableLayout android:id="@+id/detailsContainer" android:layout_width="match_parent"
-                 android:layout_height="0dp" android:orientation="vertical"
-                 android:layout_weight="1"
-                 android:padding="15dp"
-                 android:gravity="bottom">
-
-        <TableRow android:layout_width="match_parent"
-                  android:layout_height="0dp"
-                  android:layout_weight="1"
-                  android:orientation="horizontal"
-                  android:gravity="center">
-            <LinearLayout android:layout_width="0dp" android:layout_height="wrap_content"
-                          android:orientation="vertical" android:layout_weight="1"
-                          android:gravity="center" android:padding="8dp"
-                          android:background="#74404040">
-                <TextView android:layout_width="wrap_content"
-                          android:layout_height="wrap_content"
-                          android:textSize="18dp"
-                          android:text="New moon"
-                          android:textColor="#FFD5D5D5"/>
-                <Space android:layout_width="wrap_content" android:layout_height="5dp"/>
-                <ImageView android:layout_width="35dp"
-                           android:layout_height="35dp"
-                           android:src="@drawable/ic_full_moon" android:tint="#FFFFFF"/>
-                <Space android:layout_width="wrap_content" android:layout_height="2dp"/>
-
-                <TextView android:id="@+id/new_moon"
-                          android:layout_width="wrap_content"
-                          android:layout_height="wrap_content"
-                          android:textSize="16dp"
-                          android:text="06:40 AM"
-                          android:textColor="#FFD5D5D5"/>
-                <Space android:layout_width="wrap_content" android:layout_height="2dp"/>
-            </LinearLayout>
-            <Space android:layout_width="10dp" android:layout_height="wrap_content"/>
-            <LinearLayout android:layout_width="0dp"
-                          android:layout_height="wrap_content"
-                          android:orientation="vertical"
-                          android:layout_weight="1"
-                          android:gravity="center"
-                          android:padding="8dp"
-                          android:background="#74404040">
-                <TextView android:layout_width="wrap_content"
-                          android:layout_height="wrap_content"
-                          android:textSize="18dp"
-                          android:text="Full moon"
-                          android:textColor="#FFD5D5D5"/>
-                <Space android:layout_width="wrap_content" android:layout_height="5dp"/>
-                <ImageView android:layout_width="35dp"
-                           android:layout_height="35dp"
-                           android:src="@drawable/ic_full_moon" android:tint="#FFFFFF"/>
-                <Space android:layout_width="wrap_content" android:layout_height="2dp"/>
-                <TextView android:id="@+id/full_moon" android:layout_width="wrap_content"
-                          android:layout_height="wrap_content" android:textSize="16dp"
-                          android:text="06:40 AM"
-                          android:textColor="#FFD5D5D5"/>
-                <Space android:layout_width="wrap_content" android:layout_height="2dp"/>
-            </LinearLayout>
-        </TableRow>
-        <TableRow android:layout_width="match_parent"
-                  android:layout_height="0dp"
-                  android:layout_weight="1"
-                  android:orientation="horizontal"
-                  android:gravity="center">
-            <LinearLayout android:layout_width="0dp" android:layout_height="wrap_content"
-                          android:orientation="vertical" android:layout_weight="1"
-                          android:gravity="center" android:padding="8dp"
-                          android:background="#74404040">
-                <TextView android:layout_width="wrap_content"
-                          android:layout_height="wrap_content"
-                          android:textSize="18dp"
-                          android:text="Phase"
-                          android:textColor="#FFD5D5D5"/>
-                <Space android:layout_width="wrap_content" android:layout_height="5dp"/>
-                <ImageView android:layout_width="35dp"
-                           android:layout_height="35dp"
-                           android:src="@drawable/ic_moon_phase" android:tint="#FFFFFF"/>
-                <Space android:layout_width="wrap_content" android:layout_height="2dp"/>
-
-                <TextView android:id="@+id/phase"
-                          android:layout_width="wrap_content"
-                          android:layout_height="wrap_content"
-                          android:textSize="16dp"
-                          android:text="06:40 AM"
-                          android:textColor="#FFD5D5D5"/>
-                <Space android:layout_width="wrap_content" android:layout_height="2dp"/>
-            </LinearLayout>
-            <Space android:layout_width="10dp" android:layout_height="wrap_content"/>
-            <LinearLayout android:layout_width="0dp" android:layout_height="wrap_content"
-                          android:orientation="vertical" android:layout_weight="1"
-                          android:gravity="center" android:padding="8dp"
-                          android:background="#74404040">
-                <TextView android:layout_width="wrap_content"
-                          android:layout_height="wrap_content"
-                          android:textSize="18dp"
-                          android:text="Synodic Day"
-                          android:textColor="#FFD5D5D5"/>
-                <Space android:layout_width="wrap_content" android:layout_height="5dp"/>
-                <ImageView android:layout_width="35dp"
-                           android:layout_height="35dp"
-                           android:src="@drawable/ic_calendar" android:tint="#FFFFFF"/>
-                <Space android:layout_width="wrap_content" android:layout_height="2dp"/>
-                <TextView android:id="@+id/day" android:layout_width="wrap_content"
-                          android:layout_height="wrap_content" android:textSize="16dp"
-                          android:text="06:40 AM"
-                          android:textColor="#FFD5D5D5"/>
-                <Space android:layout_width="wrap_content" android:layout_height="2dp"/>
-            </LinearLayout>
-        </TableRow>
-    </TableLayout>
     <ProgressBar android:id="@+id/loader" android:layout_width="wrap_content"
                  android:layout_height="wrap_content" android:layout_centerInParent="true"
                  android:visibility="gone"/>
