--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -11,6 +11,7 @@
     <style name="spinnerStyle" parent="@android:style/Widget.DropDownItem.Spinner">
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">18sp</item>
+        <item name="android:layout_width">wrap_content</item>
     </style>
 
 </resources>
